[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/eips"
repository = "https://github.com/alloy-rs/eips"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.dependencies]
alloy-primitives = { version = "1.0", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-serde = { version = "0.8", default-features = false }

# serde
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# crypto
c-kzg = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }

# arbitrary
arbitrary = "1.3"

# for 7702 signed authorization list arbitrary
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand = "0.8"

# misc
thiserror = { version = "2.0.0", default-features = false }
derive_more = { version = "1.0.0", default-features = false }
once_cell = { version = "1.19", default-features = false }

# internal
alloy-eip4844-core = { path = "crates/alloy_eip4844_core" }
alloy-eip7691 = { path = "crates/eip7691" }
alloy-eip2930 = { path = "crates/eip2930" }
alloy-eip7702 = { path = "crates/eip7702" }
alloy-eip7840 = { path = "crates/eip7840" }
