[package]
name = "alloy-eip2124"
description = "Fork identifier for chain compatibility checks"

version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true, features = ["derive"] }

# serde
serde = { workspace = true, optional = true }

# used for forkid
crc = "3"

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

thiserror.workspace = true

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }

[features]
default = ["std"]
std = ["alloy-primitives/std", "alloy-rlp/std", "serde?/std", "thiserror/std"]
serde = ["dep:serde", "alloy-primitives/serde"]
arbitrary = ["std", "dep:arbitrary", "dep:rand", "alloy-primitives/arbitrary"]
