[package]
name = "eip-2930"
description = "Implementation of EIP-2930 type definitions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true, features = ["derive"] }

# serde
alloy-serde = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }

# for signed authorization list arbitrary
k256 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = ["alloy-primitives/std", "alloy-rlp/std", "serde?/std"]
serde = ["dep:alloy-serde", "dep:serde", "alloy-primitives/serde"]
arbitrary = [
    "std",
    "dep:arbitrary",
    "dep:rand",
    "alloy-primitives/arbitrary",
    "alloy-serde?/arbitrary",
]
k256 = ["alloy-primitives/k256", "dep:k256"]
