[package]
name = "alloy-eip2930"
description = "Implementation of EIP-2930 type definitions"

version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--show-type-layout",
]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp"] }
alloy-rlp = { workspace = true, features = ["derive"] }

# serde
serde = { workspace = true, optional = true }

# borsh
borsh = { workspace = true, optional = true, features = ["derive"] }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = ["alloy-primitives/std", "alloy-rlp/std", "serde?/std", "borsh?/std"]
serde = ["dep:serde", "alloy-primitives/serde"]
arbitrary = ["std", "dep:arbitrary", "dep:rand", "alloy-primitives/arbitrary"]
borsh = [
	"dep:borsh",
	"alloy-primitives/borsh",
]