[package]
name = "alloy-eip7691"
description = "Implementation of EIP-7691 type definitions"

version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-eip4844-core.workspace = true

[lints]
workspace = true
