[package]
name = "alloy-eip7840"
description = "Implementation of EIP-7840 type definitions"

version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-eip7691 = { path = "../eip7691" }
common = { path = "../common" }

[lints]
workspace = true
