[package]
name = "eip7928"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp","serde","map"] }
alloy-rlp = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
